Orientation/OMNET++/Projects/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:17:20 **** Build of configuration release for project ticktocfirst ****
make MODE=release all 
txc1first.cc
txc1first.cc:24:31: error: unknown type name 'cmMessage'
void Txc1first::handleMessage(cmMessage *msg)
                              ^
txc1first.cc:26:43: error: invalid operands to binary expression ('const char *' and 'const char[23]')
    EV<<"Recived message"<<msg-->getName()<<",sending it out again\n";
                                 ~~~~~~~~~^ ~~~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
make: *** [Makefile:108: out/clang-release//txc1first.o] Error 1
"make MODE=release all" terminated with exit code 2. Build might be incomplete.
14:28:00 **** Incremental Build of configuration release for project ticktocfirst ****
make MODE=release all 
txc1first.cc
Creating executable: out/clang-release//ticktocfirst.exe
14:31:53 **** Incremental Build of configuration release for project ticktocfirst ****
make MODE=release all 
make: Nothing to be done for 'all'.
14:39:46 **** Incremental Build of configuration release for project ticktocfirst ****
make MODE=release all 
make: Nothing to be done for 'all'.
14:40:09 **** Incremental Build of configuration release for project ticktocfirst ****
make MODE=release all 
make: Nothing to be done for 'all'.
